wordpress/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: danny-wordpress
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - dannyaddison.com
    - www.dannyaddison.com
    tls:
      httpsRedirect: true
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: dannyaddison-com-tls
    hosts:
    - wordpress/dannyaddison.com
    - wordpress/www.dannyaddison.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: danny-wordpress
  namespace: wordpress
spec:
  hosts:
  - dannyaddison.com
  - www.dannyaddison.com
  gateways:
  - istio-system/danny-wordpress
  http:
  - match:
    - port: 8443
    route:
    - destination:
        host: danny-wordpress
        port:
          number: 80
